# claude-plugins

./: .gitignore  LICENSE  README.md
.claude-plugin/: marketplace.json
plugins/context-optimize/: README.md
plugins/context-optimize/.claude-plugin/: plugin.json
plugins/context-optimize/skills/context-optimize/: SKILL.md
plugins/cos-mcp/: .mcp.json  README.md
plugins/cos-mcp/.claude-plugin/: plugin.json
plugins/cos-mcp/scripts/: setup.js
plugins/cos-mcp/server/: requirements.txt  server.py
plugins/cos-mcp/skills/setup/: SKILL.md
plugins/email-mcp/: .mcp.json  README.md
plugins/email-mcp/.claude-plugin/: plugin.json
plugins/email-mcp/scripts/: setup.js
plugins/email-mcp/server/: index.js  package.json
plugins/email-mcp/skills/setup/: SKILL.md
plugins/hap-dev/: README.md
plugins/hap-dev/.claude-plugin/: plugin.json
plugins/hap-dev/skills/fix-hap-bug-finish/: SKILL.md
plugins/hap-mcp/: README.md
plugins/hap-mcp/.claude-plugin/: plugin.json
plugins/hap-mcp/hooks/: hooks.json
plugins/hap-mcp/scripts/: credentials.example  hap_reauth.sh  hap_start.sh  setup.js
plugins/hap-mcp/skills/setup/: SKILL.md
plugins/oldoa-mcp/: .mcp.json  README.md
plugins/oldoa-mcp/.claude-plugin/: plugin.json
plugins/oldoa-mcp/scripts/: create_app.js
plugins/oldoa-mcp/server/: pyproject.toml
plugins/oldoa-mcp/server/src/oldoa/: api_client.py  auth.py  server.py  tools_calendar.py  tools_post.py
plugins/plugin-builder/: README.md
plugins/plugin-builder/.claude-plugin/: plugin.json
shared/scripts/: report_feedback.js  report_feedback.sh
(+7 files in other folders)
