[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oldoa"
version = "0.1.0"
description = "Slimmed MCP Server for Mingdao Collaboration v1 API (post + calendar only)"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
oldoa = "oldoa.server:main"
